# skillforge

./: .env.example  next.config.mjs  package-lock.json  package.json  supabase-schema.sql
.claude/: settings.local.json
.orchids/: orchids.json
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml  render.yaml  requirements.txt
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: health.py
backend/app/api/v1/: chat.py  questions.py  router.py
backend/app/core/: rate_limiter.py  security.py
backend/app/models/: requests.py  responses.py
backend/app/services/: openai_service.py  prompt_service.py  supabase_client.py
backend/migrations/: 001_add_prompt_tables.sql  002_seed_prompts.sql
backend/tests/: conftest.py  test_health.py
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/chat/: layout.tsx  page.tsx
src/app/privacy/: page.tsx
src/app/questions/: page.tsx
src/app/terms/: page.tsx
src/components/: AppSidebar.tsx  ConfigurationForm.tsx  EditableMarkdown.tsx  FileTree.tsx  Footer.tsx  InlineEditableMarkdown.tsx  InteractiveQuestionFlow.tsx  Navbar.tsx  SignUpModal.tsx  TiptapEditor.tsx  TiptapToolbar.tsx  TypesetMarkdown.tsx  UserNav.tsx
src/components/ui/: agent-selector.tsx  animated-text.tsx  button.tsx  hover-border-gradient.tsx  (+7 more)
src/contexts/: AuthContext.tsx
src/hooks/: use-fastapi-stream.ts  use-sessions.ts
src/lib/: ai-provider.ts  coding-agents.ts  db.ts  fastapi-client.ts  pending-session.ts  supabase.ts
src/styles/: tiptap.css  typeset.css
src/types/: spec-mode.ts
(+12 files in other folders)
